kubectl/actionprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actionprocessor
  labels:
    mojix.service: actionprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: actionprocessor
#    matchLabels:
#      app: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: actionprocessor
    spec:
      containers:
      - name: actionprocessor
        resources:
          limits:
            memory: 4Gi
        image: mojix/riot-core-bridges:v6.37.0
#        ports:
#       - containerPort: 80
      imagePullSecrets:
        - name: mojix-registry
      hostname: actionprocessor
      restartPolicy: Always
