kubectl/epcis-event-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 
  name: epciseventgenerator
  labels:
    mojix.service: epciseventgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: epciseventgenerator
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: epciseventgenerator
    spec:
      containers:
      - name: epciseventgenerator
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: 1000Mi
          requests:
            memory: 1000Mi
        image: mojix/vizix-epcis-event-generator:dev_6.x.x
      imagePullSecrets:
        - name: mojix-registry
      hostname: epciseventgenerator
      restartPolicy: Always
