kubectl/m2k.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m2k
  labels:
    mojix.service: m2k
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: m2k
#    matchLabels:
#      app: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: m2k
    spec:
      containers:
      - name: m2k
        resources:
          limits:
            memory: 4Gi
        image: mojix/riot-core-bridges:v6.37.0
#        ports:
#       - containerPort: 80
      imagePullSecrets:
        - name: mojix-registry
      hostname: m2k
      restartPolicy: Always
