kubectl/mapreduce.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <namespace>
  name: mapreduce
  labels:
    mojix.service: mapreduce
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: mapreduce
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: mapreduce
    spec:
      containers:
      - name: mapreduce
        resources:
          limits:
            memory: 2000Mi
          requests:
            memory: 2000Mi
        image: mojix/vizix-retail-mapreduce:canary_6.57.x
        imagePullPolicy: "Always"
      imagePullSecrets:
        - name: mojix-registry
      hostname: mapreduce
      restartPolicy: Always
