kubectl/mongoinjector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoinjector
  labels:
    mojix.service: mongoinjector
spec:
  replicas: 2
  selector:
    matchLabels:
      mojix.service: mongoinjector
#    matchLabels:
#      app: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: mongoinjector
    spec:
      containers:
      - name: mongoinjector
        resources:
          limits:
            memory: 6Gi
        image: mojix/riot-core-bridges:v6.37.0
#        ports:
#       - containerPort: 80
      imagePullSecrets:
        - name: mojix-registry
      hostname: mongoinjector
      restartPolicy: Always
