kubectl/rulesprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rulesprocessor
  labels:
    mojix.service: rulesprocessor
spec:
  replicas: 2
  selector:
    matchLabels:
      mojix.service: rulesprocessor
#    matchLabels:
#      app: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: rulesprocessor
    spec:
      containers:
      - name: rulesprocessor
        resources:
          limits:
            memory: 10Gi
        image: mojix/riot-core-bridges:v6.37.0
#        ports:
#       - containerPort: 80
      imagePullSecrets:
        - name: mojix-registry
      hostname: rulesprocessor
      restartPolicy: Always
