kubectl/notebooks-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojix.service: notebooks-api
  name: notebooks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: notebooks-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: notebooks-api
    spec:
      containers:
      - name: notebooks-api
        image: mojix/notebooks:PENotebooks
        args: ["bash --KernelGatewayApp.prespawn_count=4"]
        resources:
          limits:
            memory: 4Gi
        volumeMounts:
          - mountPath: /opt/notebooks
            name: notebooks-disk
      hostname: notebooks-api
      restartPolicy: Always
      volumes:
      - name: notebooks-disk
        persistentVolumeClaim:
          claimName: notebooks-disk
      imagePullSecrets:
        - name: mojix-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    mojix.service: notebooks-api
  name: notebooks-api
spec:
  ports:
  - name: "8999"
    port: 8999
    targetPort: 8999
  selector:
    mojix.service: notebooks-api
status:
  loadBalancer: {}
