kubectl/reports.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojix.service: reports
  name: reports
  namespace: ##namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: reports
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: reports
    spec:
      containers:
      - name: reportsapiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojix.service: reports
  name: reports
  namespace: ##namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: reports
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: reports
    spec:
      containers:
      - name: reports
        image: mojix/riot-core-reports:dev_6.x.x
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: 1000Mi
          requests:
            memory: 1000Mi
      imagePullSecrets:
        - name: mojix-registry
      hostname: reports
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: ##namespace
  labels:
    mojix.service: reports
  name: reports
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    mojix.service: reports
status:
  loadBalancer: {}
