kubectl/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mojix.service: services
  name: services
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: services
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: services
    spec:
      containers:
      - name: services
        image: mojix/riot-core-services:v6.37.0
        resources:
          limits:
            memory: 10Gi
        volumeMounts:
          - mountPath: /data
            name: services-disk
      hostname: services
      restartPolicy: Always
      volumes:
      - name: services-disk
        persistentVolumeClaim:
          claimName: services-disk
      imagePullSecrets:
        - name: mojix-registry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    mojix.service: services
  name: services
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    mojix.service: services
status:
  loadBalancer: {}
