kubectl/sohgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: <namespace>
  name: sohgenerator
  labels:
    mojix.service: sohgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: sohgenerator
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: sohgenerator
    spec:
      containers:
      - name: sohgenerator
        resources:
          limits:
            memory: 1000Mi
          requests:
            memory: 1000Mi
        image: mojix/sohgenerator:develop
        imagePullPolicy: "Always"
      imagePullSecrets:
        - name: mojix-registry
      hostname: sohgenerator
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  namespace: <namespace>
  labels:
    mojix.service: sohgenerator
  name: sohgenerator
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  type: LoadBalancer
  selector:
    mojix.service: sohgenerator
status:
  loadBalancer: {}
