kubectl/transformer.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: 
  labels:
    mojix.service: externaltransformer
  name: externaltransformer
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    mojix.service: externaltransformer
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 
  name: externaltransformer
  labels:
    mojix.service: externaltransformer
spec:
  replicas: 1
  selector:
    matchLabels:
      mojix.service: externaltransformer
  template:
    metadata:
      namespace: 
      creationTimestamp: null
      labels:
        mojix.service: externaltransformer
    spec:
      containers:
      - name: externaltransformer
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: 3500Mi
          requests:
            memory: 3000Mi
        image: mojix/vizix-api-transformer:canary_6.58.x
      imagePullSecrets:
        - name: mojix-registry
      hostname: externaltransformer
      restartPolicy: Always
