kubectl/ingress-ssl-notebooks.yaml
# to create an ingress controller via HELM
#  helm install stable/nginx-ingress --namespace default --set controller.replicaCount=2
# kubectl create secret tls aks-ingress-tls \
#    --key l3.vizix.io.key.pem \
#    --cert l3.vizix.io.crt.pem

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notebooks-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - notebooks.mojix.io
    secretName: mojix-io-ingress-tls
  rules:
  - host: notebooks.mojix.io
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy-notebooks
          servicePort: 80
