kubectl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vizix-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
#      - path: /flow
#        backend:
#          serviceName: ingress-demo
#          servicePort: 80
